--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: trading-bot-web
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn web.main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "gunicorn web.main:app -w 4 -k uvicorn.workers.UvicornWorker -b 0.0.0.0:$PORT"
     envVars:
       - key: PYTHON_VERSION
         value: 3.9
