--- a/render.yaml
+++ b/render.yaml
@@ -1,5 +1,6 @@
 services:
   # Service 1: The Web Interface (FastAPI)
+  # Triggering a new deployment
   - type: web
     name: trading-bot-web
     env: python
