--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ fastapi
 uvicorn
 jinja2
 python-multipart
-pandas==2.2.2
-numpy==1.26.4
+pandas==2.1.4
+numpy==1.25.2
 gunicorn
-pandas-ta==0.3.14b
+pandas-ta
