--- a/render.yaml
+++ b/render.yaml
@@ -3,10 +3,12 @@ services:
   # Triggering a new deployment
   - type: web
     name: trading-bot-web
-    env: python:3.9
+    runtime: python3
     buildCommand: "pip install -r requirements.txt"
     startCommand: "gunicorn web.main:app -w 1 -k uvicorn.workers.UvicornWorker --timeout 120 -b 0.0.0.0:$PORT"
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.9
       - fromGroup: trading-bot-env
 
 
