--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
   - type: web
     name: trading-bot-web
     env: python
-    buildCommand: "pip install -r requirements.txt"
+    buildCommand: "pip install --upgrade pip setuptools && pip install -r requirements.txt"
     startCommand: "gunicorn web.main:app -w 1 -k uvicorn.workers.UvicornWorker --timeout 120 -b 0.0.0.0:$PORT"
     envVars:
       - fromGroup: trading-bot-env
