--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
   # Triggering a new deployment
   - type: web
     name: trading-bot-web
-    env: python
+    env: poetry
     buildCommand: "poetry install"
     startCommand: "poetry run gunicorn web.main:app -w 1 -k uvicorn.workers.UvicornWorker --timeout 120 -b 0.0.0.0:$PORT"
     envVars:
