--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ trading_state.json
 
 # Log file
 trading_bot.log
+live_bot.log
 
 # Python virtual environment
 venv/
@@ -16,3 +17,7 @@ __pycache__/
 .vscode/
 .idea/
 live_candles.json
+
+# Web status and trade history
+web_status.json
+trade_history.json
