--- a/render.yaml
+++ b/render.yaml
@@ -1,18 +1,10 @@
 services:
-  # Service 1: The AI Trading Bot (Worker)
-  - type: worker
-    name: ai-trading-bot
-    env: python
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "py train_model.py && py main.py"
-    envVars:
-      - fromGroup: ai-trading-bot-env
-
-  # Service 2: The Web Dashboard (Web Service)
+  # A single Web Service to run everything for the free tier
   - type: web
-    name: ai-trading-dashboard
+    name: ai-trading-bot-suite
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn ai_bot_dashboard.main:app --host 0.0.0.0 --port $PORT"
+    startCommand: "py run_all.py"
     envVars:
       - fromGroup: ai-trading-bot-env
+    healthCheckPath: / # The dashboard's root URL can serve as a health check
