--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: ai-trading-bot-suite
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python3 run_all.py"
+    startCommand: "python3 main.py"
     envVars:
       - fromGroup: ai-trading-bot-env
     healthCheckPath: / # The dashboard's root URL can serve as a health check
