--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     name: ai-trading-bot-suite
     env: python
     buildCommand: "pip install -r requirements.txt"
-    startCommand: "python3 ai_bot_dashboard/dashboard.py"
+    startCommand: "uvicorn ai_bot_dashboard.dashboard:app --host 0.0.0.0 --port 10000"
     envVars:
       - fromGroup: ai-trading-bot-env
     healthCheckPath: / # The dashboard's root URL can serve as a health check
